kubernetes/maintenance/prometheus/prometheus.yml
apiVersion: extensions/v1beta1
# based on https://devopscube.com/setup-prometheus-monitoring-on-kubernetes/
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: maintenance
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.2.1
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
        - name: prometheus-storage-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: maintenance
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector: 
    app: prometheus-server
  ports:
    - name: http
      targetPort: 9090 
      port: 80
  type: ClusterIP 
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-service
  namespace: maintenance
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prometheus.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 80
